--- a/404.html
+++ b/404.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?c7e6a94bc29b7a57bd99d91a6eba2539";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
   <head>
     <meta charset="utf-8" />
     <title>Redirecting...</title>
