--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ var _hmt = _hmt || [];
     <title>Invalid URL!</title>
   </head>
   <body>
-    <p>Short URL is invalid! (Or you have been spamming the site too much)</p>
+    <p>It's invalid! (Or you have been spamming the site too much)</p>
     <p>
-      <a href="https://github.com/nelsontky/gh-pages-url-shortener">
-        Learn more about this URL shortener
+      <a href="https://zhregion.com">
+        Please contact info@zhregion.com
       </a>
     </p>
   </body>
